feat: a type is declared, named and registered before it is stored
The stored type was the fully-qualified Java name, so renaming or
moving a record orphaned every row already written. It is now a name
the application declares, carried with the TypeRef in a SurrogateType
so the two cannot drift.

Three ways to get one, and the container case can only be spelled the
last way, because java.util.List is not ours to annotate and would
collide with every other list:

  c.type(Card.class)                          named by the strategy
  c.type(billing.invoice/v2, Invoice.class) named explicitly
  c.type(card-list, TypeRef.listOf(...))    must be named

SurrogateNamingStrategy is consulted when nobody gives a name: it
reads the optional @SurrogateName, then falls back to the kebab-cased
simple name. Taking the annotation is a choice -- a strategy sees the
whole class, so an application can read an annotation of its own and
keep this library out of its domain model.

The registry refuses two types wanting one name at startup, which is
the collision check the short default needs to be safe.

SurrogateType stays a final class with a package-private constructor.
A forged pairing -- a name that says invoice beside a type that says
card -- would pass the runtime check and then decode invoice bytes as
a card, so only the configuration makes one. Its TypeRef is public,
because a storage implementation lives in its own package and needs
it, and handing that out grants nothing.

Also fixed while here: the naming regex backtracked (Sonar java:S8786)
and is now zero-width lookarounds; a destination's declared types kept
hash order, so an error message somebody has to read changed between
runs.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0132JwmrF1uP1JAHcWwmPHrY